# SGGSLog

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  spec.md  special_message.md
examples/: debug_datalog.rs  trace_complete.rs  trace_datalog.rs  trace_datalog2.rs
notebooks/: tutorial.ipynb  type_inference.ipynb
proptest-regressions/tests/: semantic_tests.txt
proptest-regressions/tests/semantic_tests/: proptests.txt
sggslog/: kernel.json
src/: lib.rs  main.rs  session.rs
src/constraint/: atomic.rs  constraint.rs  mod.rs
src/jupyter/: bin.rs  kernel.rs  mod.rs  protocol.rs
src/normalize/: mod.rs
src/parser/: ast.rs  lexer.rs  mod.rs  parser.rs
src/repl/: mod.rs  repl.rs
src/sggs/: assignment.rs  constrained.rs  deletion.rs  derivation.rs  extension.rs  factoring.rs  interpretation.rs  left_split.rs  mod.rs  move_op.rs  query.rs  resolution.rs  split_common.rs  splitting.rs  trail.rs
src/syntax/: clause.rs  formula.rs  literal.rs  mod.rs  order.rs  query.rs  signature.rs  term.rs
src/tests/: mod.rs  semantic_tests.rs
src/theory/: mod.rs  theory.rs
src/unify/: mod.rs  substitution.rs  unify.rs
tests/: cli_semantics.rs  diagnose_non_unit_unsat.rs  harder_unsatisfiable_bug.rs  jupyter_semantics.rs  minimal_bug_demo.rs  normalization_quantifier_semantics.rs  normalization_semantics.rs  notebook_tutorial.rs  notebook_type_inference.rs  parser_clause_semantics.rs  parser_semantics.rs  query_stream_termination.rs  resolution_empty_clause_bug.rs  sggs_properties.rs  theory_semantics.rs  trace_query_stream.rs  verify_satisfiability.rs
(+22 files in other folders)
